vemo-app/main/default/objects/TriggerSettings__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this box is checked the Account trigger will fire</description>
    <inlineHelpText>If this box is checked the Account trigger will fire</inlineHelpText>
    <label>Account</label>
    <type>Checkbox</type>
</CustomField>