vemo-app/main/default/objects/TriggerSettings__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Attachment</label>
    <type>Checkbox</type>
</CustomField>