vemo-app/main/default/objects/TriggerSettings__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Case</label>
    <type>Checkbox</type>
</CustomField>