vemo-app/main/default/objects/TriggerSettings__c/fields/CreditCheck__c.field-meta.xml
<CustomField>
    <fullName>CreditCheck__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CreditCheck</label>
    <type>Checkbox</type>
</CustomField>