vemo-app/main/default/objects/TriggerSettings__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Fee</label>
    <type>Checkbox</type>
</CustomField>