vemo-app/main/default/objects/TriggerSettings__c/fields/GenericDocument__c.field-meta.xml
<CustomField>
    <fullName>GenericDocument__c</fullName>
    <defaultValue>true</defaultValue>
    <label>GenericDocument</label>
    <type>Checkbox</type>
</CustomField>