vemo-app/main/default/objects/TriggerSettings__c/fields/IncomeVerification__c.field-meta.xml
<CustomField>
    <fullName>IncomeVerification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IncomeVerification</label>
    <type>Checkbox</type>
</CustomField>