vemo-app/main/default/objects/TriggerSettings__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opportunity</label>
    <type>Checkbox</type>
</CustomField>