vemo-app/main/default/objects/TriggerSettings__c/fields/OutboundEmail__c.field-meta.xml
<CustomField>
    <fullName>OutboundEmail__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OutboundEmail</label>
    <type>Checkbox</type>
</CustomField>