vemo-app/main/default/objects/TriggerSettings__c/fields/PaymentAllocation__c.field-meta.xml
<CustomField>
    <fullName>PaymentAllocation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PaymentAllocation</label>
    <type>Checkbox</type>
</CustomField>