vemo-app/main/default/objects/TriggerSettings__c/fields/PaymentInstruction__c.field-meta.xml
<CustomField>
    <fullName>PaymentInstruction__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PaymentInstruction</label>
    <type>Checkbox</type>
</CustomField>