vemo-app/main/default/objects/TriggerSettings__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PaymentMethod</label>
    <type>Checkbox</type>
</CustomField>