vemo-app/main/default/objects/TriggerSettings__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Program</label>
    <type>Checkbox</type>
</CustomField>