vemo-app/main/default/objects/TriggerSettings__c/fields/SecureSetting__c.field-meta.xml
<CustomField>
    <fullName>SecureSetting__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SecureSetting</label>
    <type>Checkbox</type>
</CustomField>