vemo-app/main/default/objects/TriggerSettings__c/fields/StewardshipACHBatch__c.field-meta.xml
<CustomField>
    <fullName>StewardshipACHBatch__c</fullName>
    <defaultValue>true</defaultValue>
    <label>StewardshipACHBatch</label>
    <type>Checkbox</type>
</CustomField>