vemo-app/main/default/objects/TriggerSettings__c/fields/StewardshipACHBatchDetail__c.field-meta.xml
<CustomField>
    <fullName>StewardshipACHBatchDetail__c</fullName>
    <defaultValue>true</defaultValue>
    <label>StewardshipACHBatchDetail</label>
    <type>Checkbox</type>
</CustomField>