vemo-app/main/default/objects/TriggerSettings__c/fields/StudentProgram__c.field-meta.xml
<CustomField>
    <fullName>StudentProgram__c</fullName>
    <defaultValue>true</defaultValue>
    <label>StudentProgram</label>
    <type>Checkbox</type>
</CustomField>