vemo-app/main/default/objects/TriggerSettings__c/fields/StudentProgramAmountDue__c.field-meta.xml
<CustomField>
    <fullName>StudentProgramAmountDue__c</fullName>
    <defaultValue>true</defaultValue>
    <label>StudentProgramAmountDue</label>
    <type>Checkbox</type>
</CustomField>