vemo-app/main/default/objects/TriggerSettings__c/fields/StudentProgramMonthlyStatus__c.field-meta.xml
<CustomField>
    <fullName>StudentProgramMonthlyStatus__c</fullName>
    <defaultValue>true</defaultValue>
    <label>StudentProgramMonthlyStatus</label>
    <type>Checkbox</type>
</CustomField>