vemo-app/main/default/objects/TriggerSettings__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Transaction</label>
    <type>Checkbox</type>
</CustomField>