vemo-app/main/default/objects/TriggerSettings__c/fields/TransactionBatch__c.field-meta.xml
<CustomField>
    <fullName>TransactionBatch__c</fullName>
    <defaultValue>true</defaultValue>
    <label>TransactionBatch</label>
    <type>Checkbox</type>
</CustomField>